clusters/titania/apps/portkey/intel-llama-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portkey-intel-llama
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-set-headers: portkey/portkey-intel-llama-request-headers
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
  labels:
    app.kubernetes.io/name: portkey
    app.kubernetes.io/instance: portkey
    app.kubernetes.io/component: gateway
spec:
  tls:
    - hosts:
        - portkey.cosmos.cboxlab.com
      secretName: cosmos-cboxlab-cert
  rules:
    - host: portkey.cosmos.cboxlab.com
      http:
        paths:
          - path: /intel-llama(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: portkey
                port:
                  name: http
